--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "spin-lock"
 version = "0.1.0"
 edition = "2021"
-
+readme = ""
+repository = "https://github.com/xmh0511/spin-lock-rs"
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
